package events;

import "http.proto";

message Origin {
    required string jobName = 1;
    required int32  jobInstanceId = 2;
}

message Envelope {
    enum EventType {
        HttpStart = 1;
        HttpStop = 2;
    }

    required Origin origin = 1;
    required EventType eventType = 2;

    optional HttpStart httpStart = 3;
    optional HttpStop httpStop= 4;
}